_includes/layout.css
#content { grid-area: content; }
#root { grid-area: root; }
header { grid-area: header; }
main   { grid-area: main; }
footer { grid-area: footer; }
#webmentions { grid-area: webmentions; }

*, *:before, *:after {
  box-sizing: border-box;
}

/* hide until theme is loaded */
timed-backgrounds {
  display: none;
}

#root,
#content {
  max-width: 100rem;
  margin: auto;
  position: relative;
}

@media screen and (min-width: 480px) {
  #root,
  #content {
    display: grid;
    grid-template-areas:
      "header"
      "main"
      "footer";
  }
}

p + p,
p + h3,
p + h4 {
  margin-top: 1rem;
}

main img {
  max-width: 100%
}

figure.avatar {
  margin: 1rem auto;
  max-width: 200px;
  overflow: hidden;
}

figure.avatar img {
  max-width: 100%;
}

figure.avatar figcaption {
  z-index: -1;
  position: absolute;
}

nav.pagination ol,
nav#primary {
  display: flex;
  justify-content: center;
  align-items: center;
}

nav.pagination a,
nav.pagination li,
nav#primary a {
  flex: 1;
  padding: 0.5rem;
  text-align: center;
}

nav.pagination ol {
  list-style-type: none;
}

nav a {
  margin: 0 0 1% 0;
  line-height: 40px;
  text-align: center;
}

a.inline,
.content a {
  display: inline-block;
  max-width: 100%;
}

footer {
  text-align: center;
  margin: 1rem 0;
}

footer a {
  display: inline-block;
}

.hidden {
  position: absolute;
  left: -1000%;
  top: -1000%;
}

.tags {
  padding: 0;
  list-style-type: none;
}

.tags li {
  display: inline-block;
  line-height: 1.5;
}

dl.meta dd {
  padding: 0;
  margin: 0;
}

nav#plans {
  margin-top: 2rem;
}

pre[class*="language-"] {
  max-width: 95%;
}

.meta__time {
  margin-bottom: 0.5rem;
}

.task {
  padding: 0 0 1rem 0;
  margin: 1rem 0;
}

.task h3 {
  margin-bottom: 0.5rem;
}

.task:first-child {
  padding-top: 0;
  margin-top: 0;
}

dl.meta {
  padding: 1rem 0 0 0;
  margin: 1rem 0 0 0;
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-auto-rows: 1.25rem;
  grid-gap: 0.25rem;
}

dl.meta dt:after {
  content: ':';
}

.max-width--none {
  max-width: none;
}

ul.index {
  list-style-type: none;
  padding: 0;
}

ul.index li {
  margin-top: 0.75rem;
}

ul.index li:first-child {
  margin-top: initial;
}

.post li {
  margin-top: 0.5rem;
}

.post li:first-child {
  margin-top: initial;
}

/* accessibility */
footer a {
  line-height: 40px;
  text-align: center;
  justify-content: center;
}

footer .badges a img {
  margin: 10px 0;
}

#webmentions {
  text-align: center;
}

.webmention {
  max-width: 48rem;
  text-align: left;
  margin: 1rem auto;
}

.webmention__meta {
  display: flex;
  align-items: center;
}

.webmention__content {
  line-height: normal;
  margin-top: 0.5rem;
  max-height: 5rem;
  overflow: auto;
}

.webmention-form {
  margin-top: 2rem;
}

.form-webmention label {
  font-weight: 600;
}

/* small screen */
@media screen and (max-width: 480px) {
  h1,
  h2,
  h3,
  h4,
  p,
  address,
  nav {
    line-height: 2;
    text-align: center;
  }

  p {
    line-height: 1.2;
    text-align: left;
  }

  footer p {
    margin: 0.5rem;
  }

  footer p a {
    display: flex;
    margin: 0.35em;
  }

  .profile__details p {
    text-align: center;
  }
}

/* tablets and higher */
@media screen and (min-width: 1024px) {
  ul.index {
    column-count: 2;
  }

  article[role="main"] {
    max-width: 48em;
    margin: auto;
  }

  .blocks {
    display: grid;
    grid-template-columns: repeat(2, minmax(10rem, auto));
    grid-row-gap: 2rem;
    grid-column-gap: 3rem;
  }
}

@media screen and (min-width: 1280px) {
  .profile-loader {
    display: grid;
    grid-template-columns: minmax(200px, 1fr) 2fr;
    grid-gap: 2rem;
  }
}

/* regular screens */
@media screen and (min-width: 800px) {
  main {
    display: grid;
  }

  .home main {
    grid-template-columns: 1fr 2fr;
    grid-template-areas:
      "section section"
      "webmentions webmentions"
  }
 
  .post main,
  .plans main {
    grid-template-columns: 1fr;
    grid-template-areas: "section" "webmentions";
  }

  header {
    padding: 1rem 2rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 3rem;
  }
  
  /* Move out of viewport */
  .home section > h2 {
    position: absolute;
    top: -1000%;
    left: -1000%;
  }

  .page-title a {
    display: inline-block;
  }

  section {
    padding: 1rem 2rem;
  }

  figure.avatar {
    margin: auto;
  }

  .profile__details p {
    margin: 0;
  }

  textarea.hash {
    width: 30rem;
    height: 1rem;
    padding: 0;
    margin: 0;
  }
  
  nav#contact {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
    grid-gap: 0.35rem 0.75rem;
  }

  nav#plans {
    display: grid;
    grid-template-columns: 1fr 1fr 3fr;
    grid-column-gap: 2rem;
  }

  .tags {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
    grid-gap: 0.25rem 0.5rem;
  }

  .tags a {
    display: block;
  }
}

